# CubiLightStudio

./: .gitmodules  CMakeLists.txt  README.md
include/: Application.h  ImGuiDemoPanel.h  Log.h  OpenGLWindow.h  Panel.h  Simulation.h  StaticBlock.h  UIManager.h  Window.h
include/Math/: Color.h  IVec2.h  IVec3.h  Vec2.h  Vec3.h
include/NodeEditor/: IdStorage.h  Link.h  Node.h  NodeEditorPanel.h  NodeRegistry.h  NodeSpace.h  Port.h  PortData.h  PortRenderer.h  PortShape.h  RendererRegistry.h  Type.h
include/NodeEditor/Nodes/: BoolNode.h  ComposeIVec2Node.h  ComposeIVec3Node.h  FloatNode.h  IntNode.h  NodeRegistrations.h  Registrations.h
include/NodeEditor/PortData/: BoolPortData.h  FloatPortData.h  IVec2PortData.h  IVec3PortData.h  IntPortData.h
include/NodeEditor/Renderer/: BoolPortRenderer.h  RendererRegistrations.h
include/NodeTemp/: Link.h  NodeSpace.h
include/Panels/NodeEditor/: IdStorage.h  NodeEditorPanel.h
src/: Application.cpp  Application.h  BoolNode.cpp  GlfwWindow.cpp  GlfwWindow.h  IdStorage.cpp  Log.cpp  Log.h  Node.cpp  NodeEditorPanel.cpp  NodeRegistry.cpp  OpenGLWindow.cpp  Panel.cpp  Panel.h  Port.cpp  Simulation.cpp  UIManager.cpp  Window.cpp  Window.h  main.cpp
src/Math/: Color.cpp  Color.h  IVec2.cpp  IVec2.h  IVec3.cpp  IVec3.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h
src/NodeEditor/: IdStorage.cpp  Node.cpp  NodeEditorPanel.cpp  NodeRegistry.cpp  NodeSpace.cpp  Port.cpp  RendererRegistry.cpp
src/NodeEditor/Nodes/: BoolNode.cpp  ComposeIVec2Node.cpp  ComposeIVec3Node.cpp  FloatNode.cpp  IntNode.cpp
src/NodeEditor/PortData/: BoolPortData.cpp  FloatPortData.cpp  IVec2PortData.cpp  IVec3PortData.cpp  IntPortData.cpp
src/NodeEditor/Renderer/: BoolPortRenderer.cpp
src/NodeTemp/: Node.cpp  NodeRegistry.cpp  NodeSpace.cpp  Port.cpp
src/Nodes/: AbstractNode.h  BasePort.cpp  BasePort.h  ConstantNodes.h  ConvertNodes.h  Graph.cpp  Graph.h  Link.h  LogicNodes.h  MathNodes.h  Node.h  Nodespace.cpp  Nodespace.h  Port.h  PrimitivePorts.h  StructPorts.h  ValueNodes.h  VectorNodes.h
src/Panels/NodeEditor/: IdStorage.cpp  NodeEditorPanel.cpp
